@@ -25,6 +25,6 @@
 <activity android:label="Tippy Tipper Settings" android:name=".activities.Settings"></activity>
 
 </application>
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="17"/>
+    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="17"/>
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest>  
